@@ -44,6 +44,8 @@ Improvements:
    autoreconf 2.61.
  - Commit IDs are read from stdin when --stdin is given; works for main
    and diff view, e.g. `tig --no-walk --stdin < cherry-picks.txt`.
+ - Add option to disable focusing of the child view when it's opened.
+   Disable using: `set focus-child = no`. (GH #83)
 
 Bug fixes:
 
